<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/view_bottom_sheet_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:behavior_hideable="false"
    app:behavior_peekHeight="30dp"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/view_bsl_toprow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/menu_background_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iwMenuSliderCircle"
            android:layout_width="50dp"
            android:layout_height="30dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/menu_rectangle_circle"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <HorizontalScrollView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_bsl_toprow"
        app:layout_constraintVertical_bias="0.0">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/view_bsl_menu_items"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/menu_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_bsl_toprow"
        app:srcCompat="@drawable/placeholder">

        <ImageView
            android:id="@+id/iwMenuEdit"
            android:layout_width="100dp"
            android:layout_height="80dp"
            android:layout_margin="7dp"
            android:padding="5dp"
            app:layout_constraintBottom_toBottomOf="@+id/iwMenuPlus"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/iwMenuPlus"
            app:srcCompat="@drawable/menu_edit" />

        <TextView
            android:id="@+id/twMenuEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:padding="5dp"
            android:shadowColor="@color/black"
            android:shadowDx="1.7"
            android:shadowDy="1.7"
            android:shadowRadius="2"
            android:text="@string/edit"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/iwMenuEdit"
            app:layout_constraintStart_toStartOf="@+id/iwMenuEdit"
            app:layout_constraintTop_toBottomOf="@+id/iwMenuEdit" />


        <ImageView
            android:id="@+id/iViewMenuBackArrow"
            android:layout_width="100dp"
            android:layout_height="80dp"
            android:layout_margin="7dp"
            android:padding="5dp"
            app:layout_constraintBottom_toBottomOf="@+id/iwMenuCheckbox"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/iwMenuCheckbox"
            app:srcCompat="@drawable/menu_back_arrow" />

        <TextView
            android:id="@+id/twMenuBackArrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:padding="5dp"
            android:shadowColor="@color/black"
            android:shadowDx="1.7"
            android:shadowDy="1.7"
            android:shadowRadius="2"
            android:text="@string/back"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/iViewMenuBackArrow"
            app:layout_constraintStart_toStartOf="@+id/iViewMenuBackArrow"
            app:layout_constraintTop_toBottomOf="@+id/iViewMenuBackArrow" />

        <ImageView
            android:id="@+id/iwMenuSave"
            android:layout_width="100dp"
            android:layout_height="80dp"
            android:layout_margin="7dp"
            android:padding="5dp"
            app:layout_constraintBottom_toBottomOf="@+id/iwMenuPlus"
            app:layout_constraintEnd_toStartOf="@+id/iwMenuEdit"
            app:layout_constraintStart_toEndOf="@+id/iwMenuPlus"
            app:layout_constraintTop_toTopOf="@+id/iwMenuPlus"
            app:srcCompat="@drawable/menu_disc_save" />

        <TextView
            android:id="@+id/twMenuSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:padding="5dp"
            android:shadowColor="@color/black"
            android:shadowDx="1.7"
            android:shadowDy="1.7"
            android:shadowRadius="2"
            android:text="@string/save"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/iwMenuSave"
            app:layout_constraintStart_toStartOf="@+id/iwMenuSave"
            app:layout_constraintTop_toBottomOf="@+id/iwMenuSave" />

        <ImageView
            android:id="@+id/iwMenuPlus"
            android:layout_width="100dp"
            android:layout_height="80dp"
            android:layout_margin="7dp"
            android:padding="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/menu_plus" />

        <TextView
            android:id="@+id/twMenuPlus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:padding="5dp"
            android:shadowColor="@color/black"
            android:shadowDx="1.7"
            android:shadowDy="1.7"
            android:shadowRadius="2"
            android:text="@string/newPage"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/iwMenuPlus"
            app:layout_constraintStart_toStartOf="@+id/iwMenuPlus"
            app:layout_constraintTop_toBottomOf="@+id/iwMenuPlus" />

        <ImageView
            android:id="@+id/iwMenuCheckbox"
            android:layout_width="100dp"
            android:layout_height="80dp"
            android:layout_margin="7dp"
            android:padding="5dp"
            app:layout_constraintBottom_toBottomOf="@+id/iwMenuPlus"
            app:layout_constraintEnd_toStartOf="@+id/iwMenuPlus"
            app:layout_constraintStart_toEndOf="@+id/iViewMenuBackArrow"
            app:layout_constraintTop_toTopOf="@+id/iwMenuPlus"
            app:srcCompat="@drawable/menu_bin" />

        <TextView
            android:id="@+id/twMenu_bin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:padding="5dp"
            android:shadowColor="@color/black"
            android:shadowDx="1.7"
            android:shadowDy="1.7"
            android:shadowRadius="2"
            android:text="@string/delete"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/iwMenuCheckbox"
            app:layout_constraintStart_toStartOf="@+id/iwMenuCheckbox"
            app:layout_constraintTop_toBottomOf="@+id/iwMenuCheckbox" />
        </androidx.constraintlayout.widget.ConstraintLayout>

</HorizontalScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>