<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/widget_bottom_sheet_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/menu_background"
    android:orientation="vertical"
    app:behavior_hideable="false"
    app:behavior_peekHeight="30dp"
    app:behavior_skipCollapsed="true"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/edit_bsl_top_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/menu_background_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/ivMenuSliderCircle"
            android:layout_width="50dp"
            android:layout_height="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/menu_rectangle_circle" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <HorizontalScrollView
        android:id="@+id/horizontalScrollView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_bsl_top_row"
        app:layout_constraintVertical_bias="0.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/edit_bsl_menu_items"
            style="@style/TextAppearance.AppCompat.Widget.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivMenuSliderCircle"
            app:srcCompat="@drawable/placeholder">

            <ImageView
                android:id="@+id/ivWidgetMenuBackArrow"
                android:layout_width="100dp"
                android:layout_height="80dp"
                android:layout_margin="7dp"
                android:padding="5dp"
                app:layout_constraintBottom_toBottomOf="@+id/ivMenuCheckbox"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/ivMenuCheckbox"
                app:srcCompat="@drawable/menu_back_arrow" />

            <TextView
                android:id="@+id/tvMenuBackArrow3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:padding="5dp"
                android:shadowColor="@color/black"
                android:shadowDx="1.7"
                android:shadowDy="1.7"
                android:shadowRadius="2"
                android:text="@string/back"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/ivWidgetMenuBackArrow"
                app:layout_constraintStart_toStartOf="@+id/ivWidgetMenuBackArrow"
                app:layout_constraintTop_toBottomOf="@+id/ivWidgetMenuBackArrow" />


            <ImageView
                android:id="@+id/ivMenuCheckbox"
                android:layout_width="100dp"
                android:layout_height="80dp"
                android:layout_margin="7dp"
                android:padding="5dp"
                app:layout_constraintStart_toEndOf="@+id/ivWidgetMenuBackArrow"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/menu_checkbox" />

            <TextView
                android:id="@+id/tvMenuCheckbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:padding="5dp"
                android:shadowColor="@color/black"
                android:shadowDx="1.7"
                android:shadowDy="1.7"
                android:shadowRadius="2"
                android:text="@string/sCh3ckbox"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/ivMenuCheckbox"
                app:layout_constraintStart_toStartOf="@+id/ivMenuCheckbox"
                app:layout_constraintTop_toBottomOf="@+id/ivMenuCheckbox" />

            <ImageView
                android:id="@+id/ivMenuSwitch"
                android:layout_width="100dp"
                android:layout_height="80dp"
                android:layout_margin="7dp"
                android:padding="5dp"
                app:layout_constraintBottom_toBottomOf="@+id/ivMenuCheckbox"
                app:layout_constraintStart_toEndOf="@+id/ivMenuCheckbox"
                app:layout_constraintTop_toTopOf="@+id/ivMenuCheckbox"
                app:srcCompat="@drawable/menu_switches" />

            <TextView
                android:id="@+id/tvMenuSwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:padding="5dp"
                android:shadowColor="@color/black"
                android:shadowDx="1.7"
                android:shadowDy="1.7"
                android:shadowRadius="2"
                android:text="@string/sSw1tch"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/ivMenuSwitch"
                app:layout_constraintStart_toStartOf="@+id/ivMenuSwitch"
                app:layout_constraintTop_toBottomOf="@+id/ivMenuSwitch" />

            <ImageView
                android:id="@+id/ivMenuImage2"
                android:layout_width="100dp"
                android:layout_height="80dp"
                android:layout_margin="7dp"
                android:padding="5dp"
                app:layout_constraintBottom_toBottomOf="@+id/ivMenuCheckbox"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/ivMenuSwitch"
                app:layout_constraintTop_toTopOf="@+id/ivMenuCheckbox"
                app:srcCompat="@drawable/menu_image" />

            <TextView
                android:id="@+id/tvMenuImage2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:padding="5dp"
                android:shadowColor="@color/black"
                android:shadowDx="1.7"
                android:shadowDy="1.7"
                android:shadowRadius="2"
                android:text="@string/image"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/ivMenuImage2"
                app:layout_constraintStart_toStartOf="@+id/ivMenuImage2"
                app:layout_constraintTop_toBottomOf="@+id/ivMenuImage2" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </HorizontalScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>